--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,1 +1,70 @@
-<p>concepts works!</p>
+<div class="container-fluid">
+    <p>Data received from Child Comp:</p>
+    <nav>
+      <div class="nav nav-tabs" id="nav-tab" role="tablist">
+        <a class="nav-item nav-link active" data-toggle="tab" href="#basic-databinding" role="tab"
+          aria-controls="basic-databinding" aria-selected="true">Basic Data Binding</a>
+        <a class="nav-item nav-link" data-toggle="tab" href="#cpb-tab" role="tab" aria-controls="cpb-tab"
+          aria-selected="false">Custom Prop Binding</a>
+        <a class="nav-item nav-link" data-toggle="tab" href="#ceb-tab" role="tab" aria-controls="ceb-tab"
+          aria-selected="false">Child to Parent Comp Communication</a>
+        <a class="nav-item nav-link" data-toggle="tab" href="#directives-tab" role="tab" aria-controls="directives-tab"
+          aria-selected="false">Directives</a>
+      </div>
+    </nav>
+    <div class="tab-content" id="nav-tabContent">
+  
+      <div class="tab-pane fade show active" id="basic-databinding" role="tabpanel"
+        aria-labelledby="basic-databinding-tab">
+        <h2>Basic Data Binding</h2>
+        <h3>String Interpolation</h3>
+        <p>{{appName}} made in {{year}}</p>
+        <p title="{{appName}}">Mouseover to see this</p>
+        <input type="text" value="{{appName}}">
+  
+        <hr>
+        <h3>Property Binding </h3>
+        <p [title]="companyName">Mouseover to see this</p>
+        <input type="text" [value]="companyName">
+        <!-- todo: [ngClass] aka  class binding, [ngStyle] aka style binding -->
+
+        <hr>
+        <h3>Event Binding</h3>
+        <button onclick="btnClickHandler()">Click me -- this wont work -- refer console</button>
+        <br><br>
+        <button (click)="btnClickHandler($event)">Click me</button>
+        <!-- todo: change the button label  to 'Clicked' on click and disable the button also -->
+
+        <hr>
+        <h3>Two Way Binding</h3>
+        <p>{{course}}</p>
+        <input type="text" [value]="course">
+        <br>
+        <input type="text" [(ngModel)]="course">
+
+
+      </div>
+  
+      <div class="tab-pane fade" id="cpb-tab" role="tabpanel" aria-labelledby="cpb-tab-tab">
+        <h2>Custom Property Binding -- Parent to Child Comp Communication</h2>
+        
+        
+      </div>
+  
+      <div class="tab-pane fade" id="ceb-tab" role="tabpanel" aria-labelledby="ceb-tab-tab">
+        <h2>Child to Parent Comp Communication</h2>
+        
+  
+  
+      </div>
+  
+      <div class="tab-pane fade" id="directives-tab" role="tabpanel" aria-labelledby="directives-tab">
+        <h2>Directives</h2>
+        
+  
+      </div>
+  
+  
+    </div>
+  </div>
+  
