--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,15 +1,15 @@
 <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
+    <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
         <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/concepts">Concepts</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/users">User Management</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/about">About</a>
+    <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/about">About us</a>
     </li> 
     <ng-content></ng-content>
     <!-- todo: conditional content projection in angular 5,6,7, 8,9, 10-->
