--- a/src/app/concepts/concepts.component.html
+++ b/src/app/concepts/concepts.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <p>Data received from Child Comp:</p>
+    <p>Data received from Child Comp: {{dataReceivedFromChild}}</p>
     <nav>
       <div class="nav nav-tabs" id="nav-tab" role="tablist">
         <a class="nav-item nav-link active" data-toggle="tab" href="#basic-databinding" role="tab"
@@ -47,14 +47,21 @@
   
       <div class="tab-pane fade" id="cpb-tab" role="tabpanel" aria-labelledby="cpb-tab-tab">
         <h2>Custom Property Binding -- Parent to Child Comp Communication</h2>
-        
-        
+        <app-cpb></app-cpb>
+        <app-cpb [age]="30"></app-cpb>
+        <app-cpb [age]="40"></app-cpb>
+        <app-cpb [age]="50"></app-cpb>
+        <app-cpb [age]="year"></app-cpb>
+
       </div>
   
       <div class="tab-pane fade" id="ceb-tab" role="tabpanel" aria-labelledby="ceb-tab-tab">
         <h2>Child to Parent Comp Communication</h2>
+        <h3>Custom Event Binding</h3>
+        <!-- step 4 of CEB: working with custom event with handler also event object -->
+        <app-ceb (profileLoaded)="profileLoadedHandler($event)"></app-ceb>
         
-  
+        <!-- todo:  try accessing child comp data from parent comp using @ViewChild() -->
   
       </div>
   
