--- a/src/app/concepts/components/concepts.component.html
+++ b/src/app/concepts/components/concepts.component.html
@@ -84,6 +84,7 @@
         <hr>
         <h3>*ngIf</h3>
 
+        <button (click)="loginHandler()">Login</button>
         <div class="alert alert-success" *ngIf="isLoggedIn">
           Wow! you have successfully logged in!!
         </div>
