--- a/src/app/users/components/add-user/add-user.component.html
+++ b/src/app/users/components/add-user/add-user.component.html
@@ -49,7 +49,7 @@
           </div>
         </div>
   
-        <div class="alert alert-success">
+        <div class="alert alert-success" *ngIf="isSaved">
           Saved Successfully
         </div>
   
