--- a/src/app/users/components/users.component.html
+++ b/src/app/users/components/users.component.html
@@ -9,11 +9,11 @@
 	</div>
 
 	<div class="row">
-		<div class="card col-sm-3">
+		<div class="card col-sm-3" *ngFor="let user of usersList">
 			<div class="card-body">
-				<h5 class="card-title">John</h5>
-				<p class="card-text">345235425</p>
-				<a routerLink="/users/1" class="link">View Details</a>
+				<h5 class="card-title">{{user.name}}</h5>
+				<p class="card-text">{{user.phone}}</p>
+				<a routerLink="/users/{{user.id}}" class="link">View Details</a>
 			</div>
 		</div>
 	</div>
