--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -28,7 +28,7 @@
                           <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" name="fullName"
-                            placeholder="Enter name" required ngModel>
+                            placeholder="Enter name" required>
                           </div>
                         </div>
                         <div class="form-group row">
