--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -2,12 +2,12 @@
     <div class="container">
         <div class="row">
           <div class="card col-md-12">
-            <div class="card-body">
-              <h5 class="card-title">John</h5>
+            <div class="card-body" *ngIf="contactData">
+              <h5 class="card-title">{{contactData.name}}</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                 card's content.</p>
-              <p>Phone: 4532525424</p>
-              <p>Email: a@b.com</p>
+              <p>Phone: {{contactData.phone}}</p>
+              <p>Email: {{contactData.email}}</p>
               <button type="button" class="btn btn-primary" data-toggle='modal' data-target='#editUserModal'>Edit</button>
               <button type="button" class="btn btn-danger">Delete</button>
       
