--- a/src/app/users/components/user-details/user-details.component.html
+++ b/src/app/users/components/user-details/user-details.component.html
@@ -8,7 +8,8 @@
                 card's content.</p>
               <p>Phone: {{contactData.phone}}</p>
               <p>Email: {{contactData.email}}</p>
-              <button type="button" class="btn btn-primary" data-toggle='modal' data-target='#editUserModal'>Edit</button>
+              <button type="button" class="btn btn-primary" 
+              data-toggle='modal' data-target='#editUserModal' (click)="editModalOpenHandler()">Edit</button>
               <button type="button" class="btn btn-danger">Delete</button>
       
               <!-- Modal -->
@@ -22,31 +23,31 @@
                         <span aria-hidden="true">&times;</span>
                       </button>
                     </div>
-                    <div class="modal-body">
-                      <form>
+                    <div class="modal-body" *ngIf="duplicateContactData">
+                      <form ngNativeValidate #f="ngForm" (ngSubmit)="updateUserHandler(f)">
                         <div class="form-group row">
                           <label for="staticEmail" class="col-sm-2 col-form-label">Name</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" name="fullName"
-                            placeholder="Enter name" required>
+                            placeholder="Enter name" [(ngModel)]="duplicateContactData.name" required>
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="staticEmail" class="col-sm-2 col-form-label">Phone</label>
                           <div class="col-sm-10">
                             <input type="text" class="form-control" name="phone"
-                            placeholder="Enter Phone" required>
+                            placeholder="Enter Phone" [(ngModel)]="duplicateContactData.phone" required>
                           </div>
                         </div>
                         <div class="form-group row">
                           <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                           <div class="col-sm-10">
                             <input type="email" class="form-control" name="email"
-                            placeholder="Enter Email" required>
+                            placeholder="Enter Email" [(ngModel)]="duplicateContactData.email" required>
                           </div>
                         </div>
       
-                        <div class="alert alert-success">
+                        <div class="alert alert-success" *ngIf="isUpdated">
                           Updated successfully!
                         </div>  
     
