--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,6 @@
-<p>about works!</p>
+<div class="container">
+    <h1>Any to Any Comp Commn</h1>
+    <p>{{accountName}}</p>
+    <input type="text" [(ngModel)]="accountName"> 
+    <button type="button" (click)="updateAccountBtnHandler()">Update Account Name</button>
+</div>
