--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -14,6 +14,9 @@
 				<li class="nav-item">
 					<a class="nav-link" href="#">Signup</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">{{accountName}}</a>
+				</li>
 			</app-menu>
 		</div>
 	</nav>
